# notebooklm-repo-artefacts

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ci-and-testing.md  codemap.md  how-it-works.md  pipeline.md  troubleshooting.md  use-cases.md
docs/artefacts/: index.html
docs/brainstorms/: 2026-03-10-pipeline-robustness-brainstorm.md  2026-03-11-centralised-artefact-store-brainstorm.md  2026-03-15-pipeline-restructure-brainstorm.md
docs/plans/: 2026-03-11-feat-centralised-artefact-store-plan.md
docs/solutions/: 2026-03-15-pipeline-restructure-learnings.md
scripts/: check_links.py  run_act.sh
src/repo_artefacts/: __init__.py  cli.py  collector.py  config.py  console.py  exceptions.py  notebooklm.py  pages.py  pipeline.py  publish.py  readme_updater.py  store.py  template.html
tests/: conftest.py  test_cli.py  test_collector.py  test_integration.py  test_notebooklm.py  test_pages.py  test_pipeline.py  test_publish.py  test_publish_extended.py  test_readme_updater.py  test_store.py  test_token.py
