[project]
name = "repo-artefacts"
version = "0.1.0"
description = "Generate NotebookLM artefacts (audio, video, slides, infographic) from any git repository"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "md2pdf-mermaid>=1.4",
    "notebooklm-py>=0.3",
    "rich>=13.0",
]

[project.scripts]
repo-artefacts = "repo_artefacts.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_artefacts"]
