[project]
name = "notebooklm-repo-artefacts"
version = "0.1.0"
description = "Generate NotebookLM artefacts (audio, video, slides, infographic) from any git repository"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Andy Taylor"}]
keywords = ["notebooklm", "repository", "documentation", "audio", "video", "slides", "infographic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "typer>=0.12",
    "md2pdf-mermaid>=1.4",
    "notebooklm-py>=0.3",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/andytaylor/notebooklm-repo-artefacts"
Repository = "https://github.com/andytaylor/notebooklm-repo-artefacts"
Issues = "https://github.com/andytaylor/notebooklm-repo-artefacts/issues"

[project.scripts]
repo-artefacts = "repo_artefacts.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_artefacts"]
